--- a/tools/create_env/__brick__/.vscode/launch.json
+++ b/tools/create_env/__brick__/.vscode/launch.json
@@ -2,11 +2,10 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Flutter (prod) - iPhone 15 Pro Max",
+      "name": "prod",
       "request": "launch",
       "type": "dart",
       "program": "lib/main.dart",
-      "deviceId": "0AEE3550-4051-41D5-AA4E-24475D1B7412",
       "args": [
         "--dart-define-from-file=env/prod.env.json",
         "--flavor=prod"
